<resources>
    <string name="app_name">Racquetball Referee</string>
    <string name="action_settings">Settings</string>
    <string name="plus_one">+1</string>
    <string name="minus_one">Technical Foul (-1)</string>
    <string name="category_singles">Singles</string>
    <string name="category_doubles">Doubles</string>
    <string name="category_cut_throat">Cut Throat</string>
    <string name="reset">Reset</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="player_three">Player Three</string>
    <string name="player_four">Player Four</string>
    <string name="_0">0</string>
    <string name="_1_point">+1 Point</string>
    <string name="technical_foul_1">Technical Foul (-1)</string>
    <string name="player_one_key">player_one_key</string>
    <string name="player_two_key">player_two_key</string>
    <string name="player_three_key">player_three_key</string>
    <string name="player_four_key">player_four_key</string>
    <string name="version_name">1.0.0</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
</resources>